# GoyGram

./: .gitignore  README.md  pyproject.toml  test.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: pub.yml
ext_rust/: Cargo.toml
ext_rust/src/: lib.rs
goygram/: __init__.py  client.py  dc_fetcher.py  logging.py  security.py  utils.py
goygram/core/: disp.py
goygram/filters/: __init__.py
goygram/types/: __init__.py  cb.py  member.py  msg.py  poll.py
